Add maintainer dashboards

--- a/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
@@ -272,6 +272,16 @@ We aim to keep the merge request per maintainer type at a reasonable level as we
 
 <embed width="100%" height="100%" style="min-height:400px;" src="<%= signed_periscope_url(dashboard: 655064, embed: 'v2') %>">
 
+We can also gauge demand by looking at the [Maintainership Demand dashboard](https://app.periscopedata.com/app/gitlab/1055628/Maintainership-Demand?widget=15440601&udv=1762708):
+
+<embed width="100%" height="100%" style="min-height:400px;" src="<%= signed_periscope_url(dashboard: 1055628, embed: 'v2') %>">
+
+### Maintainer/Reviewer Availability
+
+We aim to have enough reviewers and maintainers across timezones to ensure that there are people available to review MRs in a timely manner while keeping review load at a reasonable level. We track this in the [Reviewer/Maintainer Availability and Capacity dashboard](https://app.periscopedata.com/app/gitlab/1028635/Reviewer-Maintainer-Availability-and-Capacity):
+
+<embed width="100%" height="100%" style="min-height:400px;" src="<%= signed_periscope_url(dashboard: 1028635, embed: 'v2') %>">
+
 ## Leading Organizations
 
 All wider community members, and their organizations, [can
