Update Security Research role description

--- a/sites/handbook/source/handbook/engineering/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/security/index.html.md.erb
@@ -248,15 +248,17 @@ GitLab's internal [Red Team](/handbook/engineering/security/threat-management/re
 
 #### Security Research
 
-[Security Research](/handbook/engineering/security/threat-management/security-research/) specialists conduct internal testing against GitLab assets, against FOSS that is critical to GitLab products and operations, and against vendor products being considered for purchase and integration with GitLab. Initiatives for this specialty also include:
+[Security Research](/handbook/engineering/security/threat-management/security-research/)
+team members focus on security problems that require a high level of expertise,
+and development of novel solutions.  This includes in-depth security testing
+against FOSS that is critical to GitLab, and development of new  security
+capabilities. Initiatives for this specialty include:
 
-- Conduct vulnerability research against all GitLab and GitLab.com assets
-- Research FOSS tools that are integrated with GitLab
-- Develop proof-of-concept code to be included in security findings
-- Report findings to tool developers and track mitigation process
-- Follow [GitLab's responsible disclosure policy](/security/disclosure/#external) for community disclosure
-- Author blog posts on vulnerabilities discovered
-- Conduct vulnerability research against SaaS apps and other products that are used by GitLab
+- Vulnerability Research into tools and applications that are integrated with, or used at GitLab
+- Development of proof-of-concept code to demonstrate impact of security findings
+- Development and demonstration of novel defensive and offensive capabilities
+- Following [GitLab's responsible disclosure policy](/security/disclosure/#external) for third party disclosure
+- Sharing results widely through blog posts, conference talks, and participation in industry initiatives
 
 Security research specialists are subject matter experts (SMEs) with highly specialized security knowledge in specific areas, including reverse engineering, incident response, malware analysis, network protocol analysis, cryptography, and so on. They are often called upon to take on security tasks for other security team members as well as other departments when highly specialized security knowledge is needed. Initiatives for SMEs may include:
 
@@ -988,7 +990,7 @@ Security Department | GitLab
 
 ## Security Engineering Code Contributions
 
-Security Engineers typically act as Subject Matter Experts and advisors to GitLab's engineering teams. Security Engineers may wish to make a larger contribution to GitLab products, for example a defense-in-depth measure or new security feature. 
+Security Engineers typically act as Subject Matter Experts and advisors to GitLab's engineering teams. Security Engineers may wish to make a larger contribution to GitLab products, for example a defense-in-depth measure or new security feature.
 
 Like any contributor, follow the [Contributor and Development Docs](https://docs.gitlab.com/ee/development/), paying particular attention to the issue workflow, merge requests workflow, style guides, and testing standards.
 
