Discontinue the R&S Standup

--- a/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/index.html.md.erb
@@ -158,7 +158,6 @@ Every scheduled team meeting _must_ have a Google Doc agenda attached to the inv
 Meetings may have multiple topics. For each topic there should be one meeting. This helps to prevent conflicting information and inefficient duplication. Some meetings may deliberately be scheduled to occur twice to better include all global participants, but this is considered to be the _same_ meeting, just held at two times.
 
 |**Topics**|**Meeting**|**Participants**|**Cadence**|
-|High priority escalations and project updates|[Reliability and Security Standup](https://docs.google.com/document/d/1vww0BfRzHtrGhMppTEw5Q27KSzD1e72dmJ3XoppxC-A/edit#heading=h.djxn68kkbjbc) (internal only)|All Engineering| As needed daily until no agenda |
 |Incident Review and followup|[Incident Review](https://docs.google.com/document/d/1Llm9tXHC2dNt_eercRUUXlUyWmOVw00wmXWQQbWvv2c/edit#) (internal only)|All Engineering|Tues|
 |Prioritization of Engineering work|[Engineering Allocation](https://docs.google.com/document/d/1j_9P8QlvaFO-XFoZTKZQsLUpm1wA2Vyf_Y83-9lX9tg/edit#) (internal only)|All Engineering|Tues|
 |Infrastructure Performance Indicator Review|[Infrastructure Key Meeting](https://docs.google.com/document/d/1YYWwdu2dw-ooXXQGW3PddA0TOvwoSvVHmNN3BNoLE2U/edit) (internal only)|Eng VP Staff, Finance & Exec leadership|Monthly|
@@ -167,8 +166,6 @@ Meetings may have multiple topics. For each topic there should be one meeting. T
 |Tactical RE team coordination|[Reliability Leader Team Sync](https://docs.google.com/document/d/1LgsQYzj5PEaBYyZ_ENxAkpvQd3Bgu3HJvH2GNgogiwY/edit?usp=sharing) (internal only)|Reliability Managers & Staff Eng|Mon & Thurs|
 |Practical exercises to improve team capabilities|[Firedrills](https://docs.google.com/a/gitlab.com/document/d/1mppLPq4beUawcvde_N3GvxM--vSdFriYbdRdTR4zrGY/edit?usp=drive_web) (internal only)|All Infra|Weds|
 |Discussions for Oncall Handover & Newsletter|[Oncall Handover](https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues?label_name%5B%5D=Reliability-Team-Newsletter)|Ending & Starting EOC| Tues|
-
-The Reliability and Security Standup repeating meeting is canceled when there is no agenda left to be addressed for a period of five days.  It starts again on the next business day after a S1 or customer facing S2 occurs in production.
 
 ##### Infrastructure Key Review
 [Key Review meetings](https://about.gitlab.com/handbook/key-review/) provide the Infrastructure leadership the opportunity to inform the executive team of our [performance indicator](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/) progress, results on OKRs, and updates on any [Cross-functional Key Initiatives](https://about.gitlab.com/company/team/structure/working-groups/#top-cross-functional-initiatives) which we are leading.
@@ -203,6 +200,9 @@ Quick checklist for the host (time order):
 ##### GitLab SaaS Infrastructure
 
 This weekly meeting has been discontinued as of Aug 23, 2021. Topics in this meeting became redundant to other coordination in the Engineering Allocation, GitLab.com Standup, and Incident Review meetings.
+
+##### Reliability & Security Daily Standup
+This daily meeting has been discontinued as of Oct 17, 2022. Improved maturity of other process along with overall improved reliability and security results led to reduced need for this session. It is expected that, as needed, follow-up sync discussions may be required for high-severity incident follow-up and these are to be scheduled as part of the overall incident management process.
 
 ##### Reliability discussions and firedrills
 
