Add Container scanning feature

--- a/sites/handbook/source/handbook/engineering/development/sec/secure/composition-analysis/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/secure/composition-analysis/index.html.md.erb
@@ -14,6 +14,7 @@ description: "The Composition Analysis group at GitLab is charged with developin
 
 The Composition Analysis group at GitLab is charged with developing solutions which perform
 [Dependency Scanning](/direction/secure/composition-analysis/dependency-scanning/),
+[Container Scanning](https://about.gitlab.com/direction/secure/composition-analysis/container-scanning/),
 and [License Compliance](/direction/secure/composition-analysis/license-compliance/).
 See [the exhaustive list of projects](#projects) the group maintains.
 
@@ -55,17 +56,7 @@ In addition to the above workflow, the Composition Analysis group can be involve
 
 ### Retrospectives
 
-#### Group retrospective
-
 After the 19th, we conduct [an asynchronous retrospective](https://about.gitlab.com/handbook/engineering/management/group-retrospectives/). You can find current and past retrospectives for Composition Analysis team in https://gitlab.com/gl-retrospectives/secure-sub-dept/composition-analysis.
-
-#### Iteration retrospective
-
-Once per quarter, first Wednesday of the new milestone, we conduct an iteration retrospective where we review our [Iteration](https://about.gitlab.com/handbook/values/#iteration) skill.
-1 week before the retrospective, [a retrospective host](https://gitlab.com/brytannia) creates [a new iteration retrospective issue](https://gitlab.com/gl-retrospectives/secure-sub-dept/composition-analysis).
-In this issue team members suggests candidate issues or epics to review.
-The host picks up one item to discuss synchronously.
-Results are documented in the retrospective issue.
 
 ### Reaction rotation
 
@@ -136,7 +127,7 @@ Please utilize all the time you have set aside. if you complete all the ones at 
 
 We use the Vulnerability Report with filters to focus on items matching [our policy](#security-policy) and reported on the relevant projects.
 
-1. [Analyzers Vulnerability Report](https://gitlab.com/groups/gitlab-org/security-products/analyzers/-/security/vulnerabilities/?state=DETECTED&severity=CRITICAL&severity=HIGH&projectId=6126012&projectId=9450192&projectId=9450195&projectId=9450197&projectId=13150952&projectId=15369510&projectId=17450826&projectId=18446184)
+1. [Analyzers Vulnerability Report](https://gitlab.com/groups/gitlab-org/security-products/analyzers/-/security/vulnerabilities/?state=DETECTED&severity=CRITICAL&severity=HIGH&projectId=6126012&projectId=9450192&projectId=9450195&projectId=9450197&projectId=13150952&projectId=15369510&projectId=17450826&projectId=18446184&projectId=24673064)
 1. [Upstream scanners Vulnerability Report][Upstream scanners Vulnerability Report]
 
 For each "Detected" item, investigate and either [dismiss it](#dismissing-a-vulnerability) or confirm it and [create an issue](#creating-security-issues) for discussion. When the vulnerability is impacting a dependency (software library, system library, base image, etc,), the possibility of an upgrade should be evaluated first. Investigate the issue only when the upgrade is not straightforward.
@@ -184,6 +175,7 @@ You can leverage quick actions to add the necessary labels.
 
     <!-- depending on the affected project: -->
     /label ~"Category:Dependency Scanning"
+    /label ~"Category:Container Scanning"
     /label ~"Category:License Compliance"
 
 It's important to add the `~security` and `~"bug::vulnerability"` labels as described above, because the [`AppSec Escalation Engine`](https://gitlab.com/gitlab-com/gl-security/engineering-and-research/automation-team/appsec-escalator/-/blob/3a7e8a4baed7b7e54039558f4f76328046543a0c/README.md#L3) will automatically pick up any issues with these labels and add additional labels `~security-sp-label-missing` and `~security-triage-appsec` as well as mention the issue in the `#sec-appsec` Slack channel. At this point, the [Stable Counterpart](/handbook/engineering/development/sec/secure/#stable-counterparts) or [Application Security team](/handbook/engineering/security/security-engineering-and-research/application-security/) triage person will pick up the issue and assign a severity as part of the appsec triage rotation.
@@ -244,6 +236,12 @@ Additional notes:
 - [gemnasium-db](https://gitlab.com/gitlab-org/security-products/gemnasium-db) is maintained by [the Vulnerability Research group](/handbook/engineering/development/sec/secure/vulnerability-research/).
 - [npm-audit analyzer](https://gitlab.com/gitlab-org/security-products/analyzers/npm-audit) is not yet part of our public offering and maintained by [the Vulnerability Research group](/handbook/engineering/development/sec/secure/vulnerability-research/).
 
+### Container Scanning
+
+- [container-scanning analyzer](https://gitlab.com/gitlab-org/security-products/analyzers/container-scanning/)
+- [Cluster Image Scanning related code](https://gitlab.com/gitlab-org/cluster-integration/gitlab-agent/-/blob/master/internal/module/starboard_vulnerability/agent/scanner.go),
+needed for [Operational Container Scanning](https://docs.gitlab.com/ee/user/clusters/agent/vulnerabilities.html) feature.
+
 ### License Compliance
 
 - [License-finder analyzer](https://gitlab.com/gitlab-org/security-products/analyzers/license-finder)
@@ -255,6 +253,10 @@ As some of our analyzers rely on open source software, we include them in our se
 To do so, we mirror their repository and execute our security scans on them:
 
 - [license-finder](https://gitlab.com/gitlab-org/security-products/dependencies/license-finder)
+- [trivy](https://gitlab.com/gitlab-org/security-products/dependencies/trivy)
+- [trivy-db](https://gitlab.com/gitlab-org/security-products/dependencies/trivy-db)
+- [trivy-db-data](https://gitlab.com/gitlab-org/security-products/dependencies/trivy-db-data)
+
 
 The vulnerabilities reported on the currently used version of the scanner are automatically reported in [the group level Vulnerability Report][Upstream scanners Vulnerability Report] and triaged as part of our [security vulnerabilities triaging process](#security-vulnerabilities-triaging-process).
 
