added featured, added screen grab of the SAFE tanuki

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-14-one-third-of-what-we-learned-about-ipos-in-taking-gitlab-public.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-14-one-third-of-what-we-learned-about-ipos-in-taking-gitlab-public.html.md.erb
@@ -5,6 +5,7 @@ author_gitlab: systes
 author_twitter: systes
 categories: news
 tags: inside GitLab, events, news
+featured: yes
 description: GitLab co-founder and CEO Sid Sijbrandij shares the first in a
   three-part series of what we learned in the process of going public.
 image_title: /images/blogimages/gitlab-logo-500.jpg
@@ -48,7 +49,7 @@ Our banking partners who were experienced in IPOs commented that it was one of t
 
 **SAFE Framework**. We worked hard to educate team members early on to ensure they were empowered to make responsible decisions as a public company. Our SAFE framework is an acronym and mnemonic for how team members should think about transparency and what they can share publicly. (It stands for Sensitive, Accurate, Financial, and Effect.) GitLab team members have embraced the [SAFE Framework](https://about.gitlab.com/handbook/legal/safe-framework/) including creating a SAFE Slack channel staffed by our Legal team where team members can seek answers as well as flag things that are of concern. In terms of company communications, when we want to keep something internal, we say, “Keep this information SAFE.” We’ll also put this flag in decks, videos, Slack messages, and other communications. It is also a required part of our onboarding and training process. We’ve even created a SAFE Slack emoji:
 
-:safe-tanuki:
+![:safe-tanuki:](/images/blogimages/safetanuki.png)
 
 All of these steps led to greater understanding among GitLab team members.
 
