--- a/sites/uncategorized/source/blog/blog-posts/2022-10-14-one-third-of-what-we-learned-about-ipos-in-taking-gitlab-public.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-14-one-third-of-what-we-learned-about-ipos-in-taking-gitlab-public.html.md.erb
@@ -9,6 +9,7 @@ featured: yes
 description: GitLab co-founder and CEO Sid Sijbrandij shares the first in a
   three-part series of what we learned in the process of going public.
 image_title: /images/blogimages/gitlab-logo-500.jpg
+twitter_text: "@systes on one-third of what we learned about IPOs from taking @gitlab public"
 ---
 
 It was this time last year that GitLab (NASDAQ: GTLB) went public and was the first company to [publicly live stream](https://vimeo.com/650088717?embedded=true&source=vimeo_logo&owner=115027220) the entire end-to-end listing day at Nasdaq. To celebrate our 1 year anniversary, I’m sharing an overview of what we learned through our S-1 filing and initial public offering (IPO) process. It’s my hope that these learnings may help others. 
