Updated Job responsibility to include code search

--- a/sites/uncategorized/source/job-families/product/product-manager/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/product/product-manager/index.html.md.erb
@@ -429,13 +429,15 @@ We're looking for a product manager to work closely with our Delivery and Scalab
 
 ### Search
 
-We're looking for a product manager to make finding things easy and delightful in GitLab. Your goals are to improve the global search experience within GitLab, and ensure the solution can scale from small self-managed instances to GitLab.com.
+We're looking for a product manager to make finding anything in the one DevOps Platform easy and delightful in GitLab. Your goals are to improve the overall search experience within GitLab, including defining the future of code search within GitLab. You'll ensure the solution can scale from small self-managed instances to GitLab.com.
 
 #### Requirements
 
-- Strong understanding of search engines, algorithms, and workflows. Direct Elasticsearch experience is a plus
+- Strong understanding of search engines, algorithms, and workflows
+- Excellent communication skills and the ability to translate complex requirements into actionable iterations
 - Familiarity with Search workflows, and helping users find what they are looking for
-- Understanding of the DevOps lifecycle and tools a plus
+- Experience with code search is a plus
+- Direct Elasticsearch experience is a plus
 
 ### Geo
 
