--- a/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/integrations/index.html.md.erb
@@ -78,7 +78,7 @@ Before starting a milestone, the team coordinates using [planning issues](https:
 We follow this process:
 - The Product Manager defines the goals of the milestone.
 - Engineers comment about the issues they consider relevant for the milestone.
-- Engineers mention any issues that will slip and the expected remaining weight.
+- Engineers complete the slipping table with any open Deliverable issues and the expected remaining weight.
 - The Product Manager and Engineering Manager work together to decide the final list of Deliverables and Stretch issues.
 - The Product Manager updates the description with the list of milestone issues and closes the planning issue.
 
