Updated to include full Legal-Employment team

--- a/sites/handbook/source/handbook/people-group/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/index.html.md.erb
@@ -159,13 +159,13 @@ We utilize labels for triaging amongst the PBPs, and to indicate to other teams 
 
 You may reference the [GitLab.com labels](https://gitlab.com/groups/gitlab-com/-/labels?utf8=%E2%9C%93&subscribed=&search=pbp) for an overview of all labels included in the PBP issue board triaging and labeling process.
 
-## Support provided by Director of Legal, Employment, to the People Group.
+## Support provided by the Legal-Employment team to the People Group.
 
-The Director of Legal, Employment, collaborates with and provides support to the People Business Partner team in many functional areas.
+The Legal-Employment team, collaborates with and provides support to the People team in many functional areas.
 
-Email approval from the Director of Legal, Employment is required prior to engagement with external counsel to allow for accurate tracking of costs.
+Email approval from the Senior Director of Legal, Employment is required prior to engagement with external counsel to allow for accurate tracking of costs.
 
-Invoices will be sent to Director of Legal, Employment, for approval with the relevant People Business Partner copied for visibility.
+Invoices will be sent to Senior Director of Legal, Employment, for approval. 
 
 ## Support provided by the People Connect Team to the People Business Partner team
 
