--- a/source/direction/manage/auth/index.html.md.erb
+++ b/source/direction/manage/auth/index.html.md.erb
@@ -13,7 +13,7 @@ canonical_path: "/direction/manage/auth/"
 | Stage | [Manage](https://about.gitlab.com/handbook/product/categories/#manage-stage) |
 | Group | [Authentication and Authorization](https://about.gitlab.com/handbook/product/categories/#authentication-and-authorization-group) |
 | Maturity | [Complete](/direction/maturity/) |
-| Content Last Reviewed | `2022-09-14` |
+| Content Last Reviewed | `2022-10-14` |
 
 
 <%= partial("direction/manage/auth/templates/intro") %>
@@ -49,12 +49,16 @@ We are also acutely aware of the increasing security needs in Authentication and
 
 ### Near-Term Goals
 
-1. Continue progress on  [Customizable Roles and Permissions](https://gitlab.com/groups/gitlab-org/-/epics/4035). We have worked through the majority of our MVC for testing [technical performance](https://gitlab.com/groups/gitlab-org/-/epics/8408) with custom roles and are going to use the next milestone to [evaluate](https://gitlab.com/gitlab-org/gitlab/-/issues/370089) the final outcome.
+1. Continue progress on [Customizable Roles and Permissions](https://gitlab.com/groups/gitlab-org/-/epics/4035). Early in the 15.6 milestone, we will have our [technical performance MVC](https://gitlab.com/groups/gitlab-org/-/epics/8408) complete, which will allow us to [understand](https://gitlab.com/gitlab-org/gitlab/-/issues/370089) the scope of work we have to do in order to make custom roles a reality.
+
+Depending on performance constraints, we hope to deliver our first customer facing portion of customizable roles in the next 2 milestones. This MVC will [allow Guest users on an Ultimate license to view code](https://gitlab.com/gitlab-org/gitlab/-/issues/20277), which is a popular issue amongst our customers. This will be achieved by adding one custom permission to the existing role of "Guest", creating a new custom role.
 
 
 2. Our MVC for [Domain Verification](https://gitlab.com/gitlab-org/gitlab/-/issues/353030) is completed as of %15.4, and unlocks a lot of features in the [Enterprise Users](https://gitlab.com/groups/gitlab-org/-/epics/5299) Epic. We now allow any provisioned user that matches a verified domain to [bypass e-mail verificaion](https://gitlab.com/gitlab-org/gitlab/-/issues/238461) for any e-mail address belonging to the domain, which is something that our customers have been requesting due to the onboarding friction it causes.
 
-Next up for Enterprise Users will be the [claims process](https://gitlab.com/gitlab-org/gitlab/-/issues/322039) for existing users who match a verified domain who were not provisioned. This will allow a group owner to claim users who match their domains.
+Next up for Enterprise Users will be an [automated user claims process](https://gitlab.com/gitlab-org/gitlab/-/issues/322039), which means that any user that matches a verified domain and was not provisioned will automatically belong to the Enterprise.
+
+We are also adding support for [group owners to reset their user's 2FA](https://gitlab.com/gitlab-org/gitlab/-/issues/372401). Up until now, our GitLab.com customers had to reach out to Support to do this. It will be much easier for our users to self-service! 
 
 ### Mid-Term Goals
 
