Update US Access to Personnel Records process

--- a/sites/handbook/source/handbook/people-policies/inc-usa/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-policies/inc-usa/index.html.md.erb
@@ -114,7 +114,7 @@ If your physician is recommending restrictions that GitLab may need to accommoda
 
 ## US Access to Personnel Records
 
-Current and former team members may request a copy of their personnel file in writing to 'peopleops@gitlab.com'. Upon receipt of the request, GitLab will review the request and, if applicable, provide a copy of the file within the timeframe required by applicable law. Additionally, team members can access certain records at anytime via Workday. 
+Current and former team members may request a copy of their personnel file in writing to `dpo@gitlab.com`. Additionally, team members can access certain records at anytime via Workday. 
 
 ### Leave Policies
 
