Add slots to Product Intelligence triage schedule

--- a/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
@@ -503,6 +503,11 @@ Answer by pointing to the appropriate handbook page or other GitLab team member 
 | Sep 12 - Sep 18 | `@mikolaj_wawrzyniak` |
 | Sep 19 - Sep 25 | `@michold` |
 | Sep 26 - Oct 2  | `@pskorupa` |
+| Oct 3 - Oct 9  | `@mikolaj_wawrzyniak` |
+| Oct 10 - Oct 16  | `@nbelokolodov` |
+| Oct 17 - Oct 23  | `@nbelokolodov` |
+| Oct 24 - Oct 30  | `@michold` |
+| Oct 31 - Nov 6  | `@pskorupa` |
 
 
 ## Team Meetings
