Add page suggestions to Incubation Engineering playbook

--- a/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
@@ -13,6 +13,36 @@ title: Incubation Engineer's Playbook
 
 This playbook contains useful tips and tricks an Incubation Engineer may employ for SEG and project success.
 
+### Structuring each Project page
+
+Each Incubation Engineering project has its own handbook page which is linked from our [list of current projects](https://about.gitlab.com/handbook/engineering/incubation/#current-focus).
+
+The following sections are should be included:
+
+#### Problem Statement
+
+Outline the problem that we're trying to solve for our users
+
+#### Vision
+
+How do we intend to solve the problem? What is our overall vision for this project and how it will fit into GitLab?
+
+#### Milestones
+
+What is the iterative approach that we'll be taking for each project?  How do we measure and demonstrate success?  Link to epics and issues as required.
+
+#### Go to market strategy
+
+Outline our marketing strategy.  How do we intend to find early adopters, build communities, and get potential users interested in our projects?
+
+#### References
+
+Links to articles (both internal and external to GitLab), issues and epics that provide further information on our approach.
+
+#### Glossary
+
+It's important to use the correct market terminology, and to define terms that may be unfamiliar to readers.
+
 ### Converting an incubation backlog project to an active SEG
 
 In order to maintain consistency, the process below should be followed when starting a new SEG from an incubation backlog project:
