Add docs requirement when releasing Incubation Engineering features

--- a/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
@@ -102,6 +102,10 @@ Incubation Engineers are often required to create prototypes or demo application
 - Prototypes and demo projects should follow GitLab's [Secure Coding Guidelines](https://docs.gitlab.com/ee/development/secure_coding_guidelines.html).
 - Use of [Personal Access Tokens is discouraged](/handbook/security/#personal-access-tokens), Project Access Tokens are often sufficient.
 
+### Releasing Features
+
+When releasing features, ensure you follow the [guidelines for documentation](https://about.gitlab.com/handbook/product/ux/technical-writing/workflow/#documentation-for-a-product-change). 
+
 ### Tools Incubation Engineers Use
 
 #### Video Recording and Editing
