Adds a section on the Incubation playbook for small how-to's

--- a/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
@@ -125,3 +125,15 @@ When releasing features, ensure you follow the [guidelines for documentation](ht
 1. Sublime Text
 1. Vim
 1. GitLab Web IDE
+
+### How do I...
+
+#### Add a new API endpoint?
+
+This MR gives an example on how to add a brand new API endpoint: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95689
+
+1) Code under `/lib/api` 
+1) Entities tests under `requests/api/entities`
+1) API tests under `/requests/api/`
+
+
