Update DevOps Tools internal links

--- a/sites/handbook/source/handbook/product/categories/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/categories/index.html.md.erb
@@ -24,7 +24,7 @@ product categories defined on this page:
 - [Product Features](/features/)
 - [Pricing page](/pricing/)
 - [DevOps Lifecycle](/stages-devops-lifecycle/)
-- [DevOps Tools](/devops-tools/)
+- [DevOps Tools](/competition/)
 - [Product Direction](/direction/)
 - [Stage visions](/direction/#devops-stages)
 - [Documentation](https://docs.gitlab.com/)
