--- a/sites/handbook/source/handbook/product/tiering-guidance-for-features/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/tiering-guidance-for-features/index.html.md.erb
@@ -55,7 +55,7 @@ instance.
 - Work with GitLab.com Premium / Ultimate subscriptions. This means there has to be
 some way of toggling or using the feature at a namespace level.
 - Have documentation.
-- Be featured on [products](/stages-devops-lifecycle/) and [DevOps tools](/devops-tools/) at launch.
+- Be featured on [products](/stages-devops-lifecycle/) and [DevOps tools](/competition/) at launch.
 
 Should product managers have any questions when making tier decisions, they should collaborate with their manager, [product leadership](/handbook/product/product-leadership/), or the CEO for clarification. The most up to date reference for pricing DRIs can be found in the [feature tier or pricing change template](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Feature-Tier-Or-Pricing-Change.md).
 
