--- a/sites/uncategorized/source/blog/blog-posts/2019-04-02-why-gitlab-ci-cd.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2019-04-02-why-gitlab-ci-cd.html.md.erb
@@ -27,7 +27,7 @@ That sounds exhausting, doesn't it?
 
 ## Current CI/CD tools
 
-At GitLab, we love transparency so much we made it [one of our core values](/handbook/values/#transparency). It's also why [we list all other DevOps tools on our website](/devops-tools/) (no, really). We think open and direct communication is the fastest way to get the feedback you need to make the right decisions. For DevOps teams, the right tools should make things easier but we've found that _more_ doesn't always mean _better_.
+At GitLab, we love transparency so much we made it [one of our core values](/handbook/values/#transparency). It's also why [we list all other DevOps tools on our website](/competition/) (no, really). We think open and direct communication is the fastest way to get the feedback you need to make the right decisions. For DevOps teams, the right tools should make things easier but we've found that _more_ doesn't always mean _better_.
 
 ### High maintenance
 
