--- a/sites/uncategorized/source/job-families/sales/smb-customer-advocate/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/sales/smb-customer-advocate/index.html.md.erb
@@ -112,7 +112,7 @@ Ticket status can be updated in the following ways:
 * [Tier Messaging](https://about.gitlab.com/handbook/marketing/strategic-marketing/tiers/#tier-messaging)
 * [Product Feature Comparison](https://about.gitlab.com/pricing/self-managed/feature-comparison/)
 * [Product Pricing](https://about.gitlab.com/pricing/)
-* [DevOps Tools Landscape](https://about.gitlab.com/devops-tools/)
+* [DevOps Tools Landscape](https://about.gitlab.com/competition/)
 
 
 **Pitching GitLab on the SMB team:**
