--- a/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-processes/index.html.md.erb
@@ -447,7 +447,7 @@ It's important to keep [`features.yml`](https://gitlab.com/gitlab-com/www-gitlab
 - [Why GitLab Ultimate?](https://about.gitlab.com/pricing/ultimate)
 - [Feature Comparison](https://about.gitlab.com/pricing/feature-comparison/)
 - [DevOps Lifecycle](https://about.gitlab.com/stages-devops-lifecycle/)
-- [DevOps Tools Landscape](https://about.gitlab.com/devops-tools/)
+- [DevOps Tools Landscape](https://about.gitlab.com/competition/)
 - [DevOps Tools Comparisons](https://about.gitlab.com/devops-tools/circle-ci-vs-gitlab/)
 
 **Internal**
@@ -1546,7 +1546,7 @@ Creating a thoughtful direction for your section, stage, or category is a useful
 Documenting a Section, Stage, Group and Category direction is critical to communicating where we are heading and why to all of our stakeholders. This is especially important to the members of your Product Group. Establishing a direction for stakeholders (including team members) to participate in, and contribute to ensures there is a concrete connection to "Why" we are iterating and how it furthers [GitLab's mission](/company/mission/#mission). Here are some of those connections:
 
 - Improving Product Performance Indicators - Usage represents market capture (whether paying or not), and the start of our dual fly-wheel. For existing customers that market capture in new capabilities also represents increased retention and because of the benefits of a single application - user satisfaction.
-- Improving Competitiveness against [alternative DevOps tools](/devops-tools/) - Leads to increased Stages Per user, and sales as they add to our "Increase Operational Efficiency"
+- Improving Competitiveness against [alternative DevOps tools](/competition/) - Leads to increased Stages Per user, and sales as they add to our "Increase Operational Efficiency"
 
 As a Product Manager you can highlight these connections in:
 
